--- a/JayKarthikeyanS058.html
+++ b/JayKarthikeyanS058.html
@@ -1,1 +1,21 @@
+<html>
+    <head>
+      <title>JAY KARTHIKEYAN</title>  
+    </head>
+    <body>
+        <center>
+            <h1>SRI KRISHNA COLLEGE OF TECHNOLOGY</h1>
+            
+            <h2>Jay Karthikeyan</h2>
+            <p>I am Jay Karthikeyan from IT A</p>
+            <p>First year, studying in Sri Krishna College of Technology, Coimbatore</p>
+            </center>
+            <center>
+            <img src="https://www.pinpng.com/pngs/m/167-1679910_skct-sri-krishna-college-of-technology-coimbatore-logo.png" width="450" length="100"<br></center>
+            <center>
+                <iframe width="930" height="523" src="https://www.youtube.com/embed/HeoGI6HuBdQ" title="SKCT - A Place to explore, collaborate and to challenge oneself" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </center>
+        </center>
 
+    </body>
+</html>
